--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^4.2.6"
 django-environ = "^0.11.2"
 djangorestframework = "^3.14.0"
+djangorestframework-simplejwt = "^5.3.0"
 pyjwt = "^2.8.0"
 django-cors-headers = "^4.3.0"
 pillow = "^10.1.0"
