--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ gunicorn = "^21.2.0"
 pymysql = "^1.1.0"
 mysqlclient = "2.2.0"
 xmltodict = "^0.13.0"
+apscheduler = "^3.10.4"
+django-apscheduler = "^0.6.2"
 
 
 [build-system]
