--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,9 @@ pillow = "^10.1.0"
 drf-yasg = "^1.21.7"
 gunicorn = "^21.2.0"
 pymysql = "^1.1.0"
-mysqlclient = "2.2.0"
+
 xmltodict = "^0.13.0"
+mysql = "^0.0.3"
 
 
 [build-system]
