:sparkles:Feat : redis 이용해서 캐싱 구현  #19

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ xmltodict = "^0.13.0"
 apscheduler = "^3.10.4"
 django-apscheduler = "^0.6.2"
 mysql = "^0.0.3"
+django-redis = "^5.4.0"
 
 
 [build-system]
